Made changes to test Eclipse Commit

--- a/WebContent/hero.html
+++ b/WebContent/hero.html
@@ -86,7 +86,7 @@ body {
 			<h1>You've Found us!</h1>
 			<p>Welcome to the home of Strawsburg Development. We are nerds
 				and love to develop things. From web sites to Android applications,
-				we enjoy developing the latest and greatest in technology.</p>
+				we enjoy developing the latest and greatest in technology. Test Test Test</p>
 			<p>
 				<a href="#" class="btn btn-primary btn-large">Learn more about
 					us.. &raquo;</a>
