--- a/WebContent/hero.html
+++ b/WebContent/hero.html
@@ -83,7 +83,7 @@ body {
 
 		<!-- Main hero unit for a primary marketing message or call to action -->
 		<div class="hero-unit">
-			<h1>You've Found us!</h1>
+			<h1>You've Found us!ssdsdsdsd</h1>
 			<p>Welcome to the home of Strawsburg Development. We are nerds
 				and love to develop things. From web sites to Android applications,
 				we enjoy developing the latest and greatest in technology. Test Test Test</p>
