--- a/WebContent/index-original.html
+++ b/WebContent/index-original.html
@@ -44,10 +44,10 @@
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="brand" href="./index.html">Bootstrap</a>
+				<a class="brand" href="./bootstrap.html">Bootstrap</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
-						<li class="active"><a href="./index.html">Home</a></li>
+						<li class="active"><a href="./bootstrap.html">Home</a></li>
 						<li class=""><a href="./getting-started.html">Get started</a>
 						</li>
 						<li class=""><a href="./scaffolding.html">Scaffolding</a></li>
