--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,157 +11,92 @@
 <link href="assets/css/bootstrap.css" rel="stylesheet">
 <style type="text/css">
 body {
-	padding-top: 20px;
-	padding-bottom: 60px;
-}
-
-/* Custom container */
-.container {
-	margin: 0 auto;
-	max-width: 1000px;
-}
-
-.container>hr {
-	margin: 60px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-	margin: 80px 0;
-	text-align: center;
-}
-
-.jumbotron h1 {
-	font-size: 100px;
-	line-height: 1;
-}
-
-.jumbotron .lead {
-	font-size: 24px;
-	line-height: 1.25;
-}
-
-.jumbotron .btn {
-	font-size: 21px;
-	padding: 14px 24px;
-}
-
-/* Supporting marketing content */
-.marketing {
-	margin: 60px 0;
-}
-
-.marketing p+h4 {
-	margin-top: 28px;
-}
-
-/* Customize the navbar links to be fill the entire space of the .navbar */
-.navbar .navbar-inner {
-	padding: 0;
-}
-
-.navbar .nav {
-	margin: 0;
-	display: table;
-	width: 100%;
-}
-
-.navbar .nav li {
-	display: table-cell;
-	width: 1%;
-	float: none;
-}
-
-.navbar .nav li a {
-	font-weight: bold;
-	text-align: center;
-	border-left: 1px solid rgba(255, 255, 255, .75);
-	border-right: 1px solid rgba(0, 0, 0, .1);
-}
-
-.navbar .nav li:first-child a {
-	border-left: 0;
-	border-radius: 3px 0 0 3px;
-}
-
-.navbar .nav li:last-child a {
-	border-right: 0;
-	border-radius: 0 3px 3px 0;
+	padding-top: 60px;
+	padding-bottom: 40px;
 }
 </style>
 <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 <link href="assets/css/css.css" rel="stylesheet">
-
+<!-- Font Libraries -->
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:800italic'
+	rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato:300,900'
+	rel='stylesheet' type='text/css'>
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
-      <script src="assets/js/html5shiv.js"></script>
+      <script src="../assets/js/html5shiv.js"></script>
     <![endif]-->
-
-<!-- Javascript files. Note: Move to bottom of doc before launch -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="assets/js/jquery.js"></script>
-<script src="assets/js/bootstrap-transition.js"></script>
-<script src="assets/js/bootstrap-alert.js"></script>
-<script src="assets/js/bootstrap-modal.js"></script>
-<script src="assets/js/bootstrap-dropdown.js"></script>
-<script src="assets/js/bootstrap-scrollspy.js"></script>
-<script src="assets/js/bootstrap-tab.js"></script>
-<script src="assets/js/bootstrap-tooltip.js"></script>
-<script src="assets/js/bootstrap-popover.js"></script>
-<script src="assets/js/bootstrap-button.js"></script>
-<script src="assets/js/bootstrap-collapse.js"></script>
-<script src="assets/js/bootstrap-carousel.js"></script>
-<script src="assets/js/bootstrap-typeahead.js"></script>
 
 <!-- Fav and touch icons -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144"
-	href="assets/ico/apple-touch-icon-144-precomposed.png">
+	href="../assets/ico/apple-touch-icon-144-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="114x114"
-	href="assets/ico/apple-touch-icon-114-precomposed.png">
+	href="../assets/ico/apple-touch-icon-114-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="72x72"
-	href="assets/ico/apple-touch-icon-72-precomposed.png">
+	href="../assets/ico/apple-touch-icon-72-precomposed.png">
 <link rel="apple-touch-icon-precomposed"
-	href="assets/ico/apple-touch-icon-57-precomposed.png">
-<link rel="shortcut icon" href="assets/ico/favicon.png">
+	href="../assets/ico/apple-touch-icon-57-precomposed.png">
+<link rel="shortcut icon" href="../assets/ico/favicon.png">
 </head>
 
 <body>
 
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<button type="button" class="btn btn-navbar" data-toggle="collapse"
+					data-target=".nav-collapse">
+					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a class="brand" href="#">Strawsburg Development</a>
+				<div class="nav-collapse collapse">
+					<ul class="nav">
+						<li class="active"><a href="#">Home</a></li>
+						<li><a href="#about">Who We Are</a></li>
+						<li><a href="#services">What We Do</a></li>
+						<li><a href="#contact">Contact Us</a></li>
+						<li class="dropdown"><a href="#" class="dropdown-toggle"
+							data-toggle="dropdown">Projects <b class="caret"></b></a>
+							<ul class="dropdown-menu">
+								<li><a href="#">Project 1</a></li>
+								<li><a href="#">Project 2</a></li>
+								<li><a href="#">Project 3</a></li>
+								<li class="divider"></li>
+								<li class="nav-header">Nav header</li>
+								<li><a href="#">Separated link</a></li>
+								<li><a href="#">One more separated link</a></li>
+							</ul></li>
+					</ul>
+					<!--             <form class="navbar-form pull-right">
+              <input class="span2" type="text" placeholder="Email">
+              <input class="span2" type="password" placeholder="Password">
+              <button type="submit" class="btn">Sign in</button>
+            </form>-->
+				</div>
+				<!--/.nav-collapse -->
+			</div>
+		</div>
+	</div>
+
 	<div class="container">
 
-		<div class="masthead">
-			<h3 class="muted">Strawsburg Development (Image)</h3>
-			<div class="navbar">
-				<div class="navbar-inner">
-					<div class="container">
-						<ul class="nav">
-							<li class="active"><a href="#">Home</a></li>
-							<li><a href="#">Projects</a></li>
-							<li><a href="#">Services</a></li>
-							<li><a href="#">Downloads</a></li>
-							<li><a href="#">About Us</a></li>
-							<li><a href="#">Contact</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<!-- /.navbar -->
+		<!-- Main hero unit for a primary marketing message or call to action -->
+		<div class="hero-unit">
+			<h1>You've Found us!</h1>
+			<p>Welcome to the home of Strawsburg Development. We are nerds
+				and love to develop things. From web sites to Android applications,
+				we enjoy developing the latest and greatest in technology. Test Test Test</p>
+			<p>
+				<a href="#" class="btn btn-primary btn-large">Learn more about
+					us.. &raquo;</a>
+			</p>
 		</div>
-
-		<!-- Jumbotron -->
-		<div class="jumbotron">
-			<h1>Welcome!</h1>
-			<p class="lead">Here is where we could locate our featured
-				porjects, or a welcome introduction.</p>
-			<a class="btn btn-large btn-success" href="#">Get started today</a>
-		</div>
-
-		<hr>
 
 		<!-- Example row of columns -->
-		<div class="row-fluid">
+		<div class="row">
 			<div class="span4">
-				<h2>Project 1</h2>
+				<h2>Heading</h2>
 				<p>Donec id elit non mi porta gravida at eget metus. Fusce
 					dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
 					ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
@@ -171,7 +106,7 @@ body {
 				</p>
 			</div>
 			<div class="span4">
-				<h2>Project 2</h2>
+				<h2>Heading</h2>
 				<p>Donec id elit non mi porta gravida at eget metus. Fusce
 					dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
 					ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
@@ -181,11 +116,11 @@ body {
 				</p>
 			</div>
 			<div class="span4">
-				<h2>Project 3</h2>
+				<h2>Heading</h2>
 				<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
 					egestas eget quam. Vestibulum id ligula porta felis euismod semper.
 					Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
-					nibh, ut fermentum massa.</p>
+					nibh, ut fermentum massa justo sit amet risus.</p>
 				<p>
 					<a class="btn" href="#">View details &raquo;</a>
 				</p>
@@ -194,16 +129,29 @@ body {
 
 		<hr>
 
-		<div class="footer">
+		<footer>
 			<p>&copy; Strawsburg Development 2013</p>
-		</div>
+		</footer>
 
 	</div>
 	<!-- /container -->
 
 	<!-- Le javascript
     ================================================== -->
-	<!-- Place javascipt files back here before launch -->
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="assets/js/jquery.js"></script>
+	<script src="assets/js/bootstrap-transition.js"></script>
+	<script src="assets/js/bootstrap-alert.js"></script>
+	<script src="assets/js/bootstrap-modal.js"></script>
+	<script src="assets/js/bootstrap-dropdown.js"></script>
+	<script src="assets/js/bootstrap-scrollspy.js"></script>
+	<script src="assets/js/bootstrap-tab.js"></script>
+	<script src="assets/js/bootstrap-tooltip.js"></script>
+	<script src="assets/js/bootstrap-popover.js"></script>
+	<script src="assets/js/bootstrap-button.js"></script>
+	<script src="assets/js/bootstrap-collapse.js"></script>
+	<script src="assets/js/bootstrap-carousel.js"></script>
+	<script src="assets/js/bootstrap-typeahead.js"></script>
 
 </body>
 </html>
