--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -80,7 +80,7 @@
                 <h1>You've Found us!</h1>
                 <p>Welcome to the home of Strawsburg Development. We are <span class="nerds">nerds</span>
                     and love to develop things. From web sites to Android applications,
-                    we enjoy developing the latest and greatest in technology. Test Test Test</p>
+                    we enjoy developing the latest and greatest in technology.</p>
                 <p>
                     <a href="#" class="btn btn-primary btn-large">Learn more about
                         us.. &raquo;</a>
