rename file and add link

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,7 +20,7 @@
         <!--[if lt IE 9]>
               <script src="../assets/js/html5shiv.js"></script>
             <![endif]-->
-
+        <link href='css\sstrawsbCustom.css' rel='stylesheet' type='text/css'>
         <!-- Fav and touch icons -->
         <link rel="apple-touch-icon-precomposed" sizes="144x144"
               href="../assets/ico/apple-touch-icon-144-precomposed.png">
