aligned footer_top with social icons.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -126,11 +126,11 @@
             <div class="footer_top">
                 <div class="foot_container">
                     <div class="rollovericons">
-                        <ul class="ul_social">
+                        <ul class="ul_social" id="social_links">
                             <li><a href="#" id="facebook" title="our facebook"><span>facebook</span></a></li>
                             <li><a href="#" id="twitter" title="our twitter"><span>twitter</span></a></li>
-                            <li><a href="#" id="share" title="share"><span>share</span></a></li>
                             <li><a href="#" id="linkedin" title="our linkedin"><span>linkedin</span></a></li>
+                            <li><a href="#" id="share" title="share"><span>share</span></a></li>
                         </ul>
                     </div>
                 </div>
